<resources>
    <string name="app_name">Birdy</string>
    <string name="enter_login">Enter login</string>
    <string name="password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="name_for_registration">Enter name</string>
    <string name="email_for_registration">Enter email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="connecting_server">Connecting\.\.\.</string>
    <string name="failed_to_sing_in">"Invalid password or email"</string>
    <string name="logout">Logout</string>
    <string name="undefined">Undefined</string>
    <string-array name="validation_errors">
        <item>Email doesn\'t match pattern!</item>
        <item>Password is too short!</item>
        <item>Password contains illegal symbols</item>
        <item>Password is too long!</item>
    </string-array>
</resources>
