<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/background_color">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/birdy_icon_main"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_login"
                android:focusable="true"
                android:inputType="text"
                android:id="@+id/entered_login"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:focusable="true"
                android:inputType="textPassword"
                android:id="@+id/entered_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textColor="@color/background_color"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:background="@drawable/rounded_button"
            android:id="@+id/login_btn"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/background_color"
            android:textSize="24sp"
            android:background="@drawable/rounded_button"
            android:id="@+id/register_btn"/>
</LinearLayout>